change site description

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Long Beach Tech
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web and App Professionals Meetup
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
