--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Long Beach Tech
 
 # Short bio or description (displayed in the header)
-description: Web and App Professionals Meetup
+description: Web & App PROfessionals Meetup (WAPRO)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
@@ -27,6 +27,7 @@ footer-links:
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: longbeachtech
+  irc: lbtech
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
 # Your disqus shortname, entering this will enable commenting on posts
@@ -37,7 +38,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://wapro.lbtech.org
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
