--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: wapro@MediaDoneRight.com
   facebook:
   flickr:
   github: lbtech
