--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Long Beach Tech
+name: WAPRO
 
 # Short bio or description (displayed in the header)
-description: Web & App PROfessionals Meetup (WAPRO)
+description: Web & App Professionals Meetup (WAPRO)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
