feat: add facebook group

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
 footer-links:
   dribbble:
   email: wapro@MediaDoneRight.com
-  facebook:
+  facebook: groups/longbeachtech
   flickr:
   github: lbtech
   instagram:
