--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Name of your site (displayed in the header)
 name: WAPRO
-
+signin-link: true
 # Short bio or description (displayed in the header)
 description: Web & App Professionals Meetup
 
