--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ signin-link:
 description: Web & App Professionals Meetup
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
-
+#avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
+avatar: /images/WAPRO.png
 #
 # Flags below are optional
 #
