--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Name of your site (displayed in the header)
 name: WAPRO
-signin-link: true
+signin-link: 
 # Short bio or description (displayed in the header)
-description: Web & App Professionals Meetup
+description: "Web & App Professionals Meetup"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
@@ -40,13 +40,13 @@ google_analytics: UA-60220524-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://wapro.lbtech.org
+url: http://uncodedlb.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/wapro"
 
 #
 # !! You don't need to change any of the configuration flags below !!
