--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ google_analytics: UA-60220524-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://uncodedlb.github.io
+url: http://www.waprolb.org
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/wapro"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
