--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ sass:
 # Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-redirect-from # 301 redirects - https://help.github.com/articles/redirects-on-github-pages/
 
 # Exclude these files from your production _site
 exclude:
