--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ avatar: /images/WAPRO.png
 #
 # Flags below are optional
 #
-
+#
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
@@ -40,7 +40,10 @@ google_analytics: UA-60220524-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url:
+redirect: "www.waprolb.org"
+redirect_meta_delay: 1  # seconds
+redirect_js_delay: 4000 # milliseconds
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
