--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: ""
 name: WAPRO
 signin-link: #true
 # Short bio or description (displayed in the header)
-description: "Web & App Professionals Meetup"
+description: "Web & App Professionals"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
