--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ irc:
   nick: wapro
 
 twitter:
-  highlight: '<!--blockquote class="twitter-tweet" data-conversation="none" lang="en"><p><a href="https://twitter.com/hashtag/Uncoded?src=hash">#Uncoded</a> is happening!&#10;&#10;APR 16 <a href="http://t.co/tPFCHRtWM3">http://t.co/tPFCHRtWM3</a>&#10;&#10;<a href="https://twitter.com/hashtag/WAPRO?src=hash">#WAPRO</a> <a href="https://twitter.com/activelamp">@activelamp</a> <a href="https://twitter.com/schmitzmade">@schmitzmade</a> <a href="https://twitter.com/rogerhoward">@rogerhoward</a> <a href="https://twitter.com/btmash">@btmash</a> <a href="http://t.co/M2ijIYoMo5">pic.twitter.com/M2ijIYoMo5</a></p>&mdash; Mike Stewart (@MediaDoneRight) <a href="https://twitter.com/MediaDoneRight/status/587790944751104000">April 14, 2015</a></blockquote-->'
+  highlight: '<!--blockquote class="twitter-tweet" data-conversation="none" lang="en"><p><a href="https://twitter.com/hashtag/Uncoded?src=hash">#Uncoded</a> is happening!&#10;&#10;APR 16 <a href="http://t.co/tPFCHRtWM3">http://t.co/tPFCHRtWM3</a>&#10;&#10;<a href="https://twitter.com/hashtag/WAPRO?src=hash">#WAPRO</a> <a href="https://twitter.com/activelamp">@activelamp</a> <a href="https://twitter.com/schmittyjd">@schmittyjd</a> <a href="https://twitter.com/rogerhoward">@rogerhoward</a> <a href="https://twitter.com/btmash">@btmash</a> <a href="http://t.co/M2ijIYoMo5">pic.twitter.com/M2ijIYoMo5</a></p>&mdash; Mike Stewart (@MediaDoneRight) <a href="https://twitter.com/MediaDoneRight/status/587790944751104000">April 14, 2015</a></blockquote-->'
 # Repository Path
 repository: "https://github.com/uncodedlb/waprolb/tree/gh-pages/_posts/"
 
@@ -95,9 +95,10 @@ sponsors:
 #
 # !! You don't need to change any of the configuration flags below !!
 #
-base.twitter: "https://twitter.com/"
-base.fb: "https://facebook.com/"
-markdown: redcarpet
+base:
+  twitter: "https://twitter.com/"
+  fb: "https://facebook.com/"
+#markdown: redcarpet
 highlighter: pygments
 permalink: /:categories/:year/:month/
 
