FEATURE:  add slaask integration

--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,10 @@ disqus: wapro
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: UA-60220524-5
 
+# Enable slaask support -- https://slaask.com
+slaask:
+  enabled: true
+  key: cd5c54c305b606f179fdc0cba063b365
 
 # WAPRO data
 
