--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://www.waprolb.org/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -16,7 +16,7 @@ baseurl: ""
 name: WAPRO
 signin-link: false
 # Short bio or description (displayed in the header)
-description: "Web & App Professionals"
+description: "Web and Application Development Professionals—Long Beach"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
