--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ description: "WAPRO meets monthly to showcase our cool tech projects, share best
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://avatars2.githubusercontent.com/u/10619762?v=3&s=200
 avatar: /images/WAPRO.png
+timezone: America/Los_Angeles
 #
 # Flags below are optional
 #
