UPDATE: sign-in link & remove TBD info on Jan meetup

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 
 # Name of your site (displayed in the header)
 name: Web and Application Development Professionals—Long Beach
-signin-link: false
+signin-link: true
 # Short bio or description (displayed in the header)
 description: "WAPRO meets monthly to showcase our cool tech projects, share best practices, network with each other, help newcomers, and the values of open source software (F/OSS).  The technology and projects we discuss is typically directed towards the professionals that build websites and mobile applications.  Although we don't cater to beginners, we welcome everyone to join us."
 
