--- a/_config.yml
+++ b/_config.yml
@@ -122,6 +122,7 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-redirect-from # 301 redirects - https://help.github.com/articles/redirects-on-github-pages/
+  - jemoji
 
 # Exclude these files from your production _site
 exclude:
