--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,9 @@ insert_final_newline = true
 charset = utf-8
 end_of_line = lf
 
+[_includes/*.html]
+insert_final_newline=false
+
 # Markdown customizations
 [*.md]
 trim_trailing_whitespace = false
