--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,12 @@
-wapro:
-  picture: /images/WAPRO.png
-  twitter: waprolb
+waprolb:
+  github: uncodedlb
   facebook: waprolb
   instagram: waprolb
-  github: uncodedlb
+  picture: /images/WAPRO.png
+  twitter: waprolb
 
 ? "Mike Stewart"
 :
+  instagram: mdrmike
   picture: /images/people/mike-stewart.jpg
   twitter: mdrmike_
-  instagram: mdrmike
