update editorconfig to ignore md or markdown extenstions

--- a/.editorconfig
+++ b/.editorconfig
@@ -17,5 +17,5 @@ end_of_line = lf
 insert_final_newline=false
 
 # Markdown customizations
-[*.md]
+[*.{md,markdown}]
 trim_trailing_whitespace = false
